Update and rename zxcvbn.html to index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <body style="background-image: url(https://wallpapers.com/images/hd/black-gradient-background-ji5n1dg53r1ygu5m.jpg); background-size: cover;">
         <h1 style="margin-left: 610px; margin-top: 0px; font-size: 80px;">Abdinasir</h1><h1 style="margin-left: 600px; margin-top: 70px; font-size: 111px;">Hassan</h1>
         <div class="pic">
-         <img style="border-radius:50%" src="C:\Users\student.jajiboye93\Downloads\portafolio.jpg" width="270" height="400">
+         <img style="border-radius:50%" src="https://github.com/nasir3334/Portfolio/blob/main/portafolio.jpg?raw=true" width="270" height="400">
         </div>
         <h1 style="font-size: 20px; margin-left: 1120px; margin-top:40px">Class of 2024</h1>
         <div class="about">
