--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
                 border-radius: 50%;
                 position: absolute;
                 margin-left: 1050px;
+                margin-top:40px
             }
             .about{
                 font-size: 10px;
                 position: absolute;
                 margin-left: 615px;
-                margin-top: 210px;
+                margin-top: 260px;
                 width: 400px;
                 word-wrap: break-word;
                 text-align: center;
@@ -65,11 +66,11 @@
         </style>
     </head>
     <body style="background-image: url(https://wallpapers.com/images/hd/black-gradient-background-ji5n1dg53r1ygu5m.jpg); background-size: cover;">
-        <h1 style="margin-left: 610px; margin-top: 0px; font-size: 80px;">Abdinasir</h1><h1 style="margin-left: 600px; margin-top: 70px; font-size: 111px;">Hassan</h1>
+        <h1 style="margin-left: 610px; margin-top: 50px; font-size: 80px;">Abdinasir</h1><h1 style="margin-left: 600px; margin-top: 120px; font-size: 111px;">Hassan</h1>
         <div class="pic">
          <img style="border-radius:50%" src="https://github.com/nasir3334/Portfolio/blob/main/portafolio.jpg?raw=true" width="270" height="400">
         </div>
-        <h1 style="font-size: 20px; margin-left: 1120px; margin-top:40px">Class of 2024</h1>
+        <h1 style="font-size: 20px; margin-left: 1120px; margin-top:80px">Class of 2024</h1>
         <div class="about">
             <h1>My name is Abdinasir Hassan. I attend Horizon Science Academy Columbus, and I'm a senior in the Class of 2024. I'm hard-working and I always strive to do my best.</h1>
         </div>
