--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="education">
             <ul>
                 <li>Senior at Horizon Science Academy Columbus High</li>
+                <li>Horizon Science Academy High School, 3592 Corporate Dr</li>
             </ul>
         </div>
         <h1 style="margin-top: 550px; font-size: 40px; margin-left: 840px;">Skills</h1>
